# stock-analyzer

./: .gitignore  LICENSE  README.md  index.html  main.py  pyproject.toml
assets/: base-styles.css  custom-styles.css
src/stock_analyzer/: app_callbacks.py  app_layout.py  callback_manager.py  utils.py
