[tool.poetry]
name = "stock-analyzer"
version = "0.1.0"
description = ""
authors = ["Rasmus Vinther Felletoft"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9"
dash = "2.11.0"
pandas = "2.0.2"
yfinance = "0.2.22"

[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "5.12.0"
mypy = "1.4.1"
pytest = "7.3"

[tool.isort]
profile = "black"
multi_line_output = 1
include_trailing_comma = true

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]

